--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,13 @@
 {
   "configurations": [
   {
-    "name": "Launch Package",
+    "name": "Launch",
     "type": "go",
     "request": "launch",
     "mode": "auto",
-    "program": "${workspaceFolder}"
+    "program": "${fileDirname}",
+    "env": {},
+    "args": []
   }
   ]
 }
