--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "type": "go",
     "request": "launch",
     "mode": "auto",
-    "program": "${fileDirname}",
+    "program": "main.go",
     "env": {},
     "args": []
   }
